[package]
name = "newserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { git = "https://github.com/dojoengine/dojo.git", rev = "504b83e045202ee52d19404f644c0623d98f05c3" }
katana-core = { git = "https://github.com/dojoengine/dojo.git", rev = "504b83e045202ee52d19404f644c0623d98f05c3" }
katana-primitives = { git = "https://github.com/dojoengine/dojo.git", rev = "504b83e045202ee52d19404f644c0623d98f05c3" }
katana-rpc-api = { git = "https://github.com/dojoengine/dojo.git", rev = "504b83e045202ee52d19404f644c0623d98f05c3" }
katana-rpc = { git = "https://github.com/dojoengine/dojo.git", rev = "504b83e045202ee52d19404f644c0623d98f05c3" }
torii-core = { git = "https://github.com/dojoengine/dojo.git", rev = "504b83e045202ee52d19404f644c0623d98f05c3" }
torii-graphql = { git = "https://github.com/dojoengine/dojo.git", rev = "504b83e045202ee52d19404f644c0623d98f05c3" }
torii-grpc = { git = "https://github.com/dojoengine/dojo.git", rev = "504b83e045202ee52d19404f644c0623d98f05c3", features = ["server", "client"] }
torii-server = { git = "https://github.com/dojoengine/dojo.git", rev = "504b83e045202ee52d19404f644c0623d98f05c3" }
torii-relay = { git = "https://github.com/dojoengine/dojo.git", rev = "504b83e045202ee52d19404f644c0623d98f05c3" }
dojo-world = { git = "https://github.com/dojoengine/dojo.git", rev = "504b83e045202ee52d19404f644c0623d98f05c3", features = ["metadata"] }
hyper = "0.14.27"
starknet = "0.8.0"
futures = "0.3.28"
tokio-stream = "0.1.11"
tokio-util = "0.7.7"
tower = "0.4.13"
tower-http = "0.4.4"

blockifier = { git = "https://github.com/starkware-libs/blockifier", tag = "v0.4.0-rc9.2" }
tokio = { version = "1.32.0", features = ["full"] }
clap = { version = "4.2", features = ["derive", "env"] }
clap_complete = "4.3"
metrics-process = "1.0.9"
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "json"] }
console = "0.15.7"
anyhow = "1.0.75"
shellexpand = "3.1.0"
url = { version = "2.4.0", features = ["serde"] }
ctrlc = { version = "3.4", features = ["termination"] }
sqlx = { version = "0.7.2", features = ["chrono", "macros", "regexp", "runtime-async-std", "runtime-tokio", "sqlite", "uuid"] }

[patch."https://github.com/starkware-libs/blockifier"]
blockifier = { git = "https://github.com/dojoengine/blockifier", rev = "8860946" }

[patch.crates-io]
cairo-felt = { git = "https://github.com/dojoengine/cairo-rs.git", rev = "1031381" }
cairo-vm = { git = "https://github.com/dojoengine/cairo-rs.git", rev = "1031381" }
