[workspace]
members = ["api", "."]

[package]
name = "keiko"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
axum = "0.6.20"
jsonrpsee-http-client = "0.20.0"
serde = "1.0.183"
serde_json = "1.0.104"
tokio = { version = "1.31.0", features = ["full"] }
url = "2.5.0"
dojo-world = { git = "https://github.com/dojoengine/dojo.git", rev = "1e6ed14e0508b7cdf6b1551cd918e84044bbc2a9", features = ["manifest"] }
dojo-common = { git = "https://github.com/dojoengine/dojo.git", rev = "1e6ed14e0508b7cdf6b1551cd918e84044bbc2a9", features = [] }


[dependencies]
axum.workspace = true
serde_json.workspace = true
clap = { version = "4.4.8", features = ["derive", "env"] }
dojo-world.workspace = true
jsonrpsee-http-client.workspace = true
keiko-api = { path = './api' }
log = "0.4.20"
run_script = "0.10.1"
tokio.workspace = true
tower-http = { version = "0.4.3", features = ["add-extension", "fs", "cors"] }
url.workspace = true