[package]
name = "keiko-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum.workspace = true
blockifier.workspace = true
jsonrpsee-core = "0.20.0"
jsonrpsee-http-client.workspace = true
katana-core.workspace = true
dojo-world.workspace = true
serde.workspace = true
serde_json.workspace = true
starknet = "0.7.0"
tokio.workspace = true
url.workspace = true